--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PostQuestionActivity"></activity>
+        <activity android:name=".QuestionSearchResultActivity"></activity>
+        <activity android:name=".PostQuestionActivity" />
         <activity android:name=".AskExpertActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
