--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AnswerQuestionActivity"></activity>
+        <activity android:name=".LogInSignUpActivity"></activity>
+        <activity android:name=".RegisterExpertActivity" />
+        <activity android:name=".AnswerQuestionActivity" />
         <activity android:name=".QuestionSearchResultActivity" />
         <activity android:name=".PostQuestionActivity" />
         <activity android:name=".AskExpertActivity" />
