--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExpertSearchResultActivity"></activity>
+        <activity android:name=".ExpertProfileActivity"></activity>
+        <activity android:name=".ExpertSearchResultActivity" />
         <activity android:name=".ExpertSearchActivity" />
         <activity android:name=".RegisterStudentActivity" />
         <activity android:name=".LogInSignUpActivity" />
