--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
+    implementation "com.firebaseui:firebase-ui-database:3.2.2"
+
 }
