--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:19.2.0'  // updated
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
 
 }
